--- a/client/src/contents/Login/LoginForm.css
+++ b/client/src/contents/Login/LoginForm.css
@@ -3,8 +3,12 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f4f4f4;
+    background-image: url('sbu_bg.jpg');
+    background-size: cover; /* Make the image cover the entire container */
+    background-position: center; /* Center the background image */
+    background-repeat: no-repeat;
 }
+
 
 .login-card {
     background: white;
